--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <html>
     <head>
         <title>Patti Raab Portfolio</title>
-		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="UTF-8" >
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Kameron|Sansita:400,400i,700i" rel="stylesheet">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/main.css">		
